Refactoring, change battle logic